# CAPE_Note

./: README.md
test_component/: CAPE.cpp  CMakeLists.txt  Histogram.cpp  PlaneSeg.cpp  pcl_io_show.cpp
test_component/data/pcd_cloud/: 1.pcd  1422133389.007695872.pcd  1422133389.108526080.pcd  1422133389.209406976.pcd  1422133389.310231040.pcd  1422133389.411056896.pcd  1422133389.511932928.pcd  1422133389.612786944.pcd  1422133389.713643008.pcd  1422133389.814490112.pcd  1422133389.915471104.pcd  1422133390.016321024.pcd  1422133390.117184000.pcd  1422133390.218072064.pcd  1422133390.318892032.pcd  1422133390.419780096.pcd  1422133390.520647936.pcd  1422133390.621494016.pcd  1422133390.722326016.pcd  1422133390.823251968.pcd  1422133390.924066048.pcd  1422133391.024920064.pcd  1422133391.125773056.pcd  1422133391.226834944.pcd  1422133391.327481088.pcd  1422133391.428343040.pcd  1422133391.529202944.pcd  1422133391.630056960.pcd  1422133391.730914048.pcd  1422133391.831769088.pcd  1422133391.932632064.pcd  1422133392.033498112.pcd  1422133392.134361088.pcd  1422133392.235211008.pcd  1422133392.336114944.pcd  1422133392.436952064.pcd  1422133392.537796096.pcd  1422133392.638651904.pcd  1422133392.739521024.pcd  1422133392.840352000.pcd  (+828 more)
